objects/Error_Log__c.object
<CustomObject>
    <description>Error_Log Custom object stores the Integration transaction error records between Tenet Marketing Org and Wunderman system.</description>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Line_Number__c</fullName>
        <label>Error Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Number__c</fullName>
        <description>This field will track the number or error records created per day</description>
        <label>Error Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Source__c</fullName>
        <description>Store information about the Source, where error originated.</description>
        <label>Error Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name Match</fullName>
                </value>
                <value>
                    <fullName>Query API Builder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opened_Date_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Opened Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Description__c</columns>
        <columns>Error_Line_Number__c</columns>
        <columns>Error_Source__c</columns>
        <columns>Error_Type__c</columns>
        <columns>Lead__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Date_Specific_View</fullName>
        <columns>NAME</columns>
        <columns>Error_Description__c</columns>
        <columns>Error_Line_Number__c</columns>
        <columns>Error_Source__c</columns>
        <columns>Error_Type__c</columns>
        <columns>Lead__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label># Date Specific View</label>
    </listViews>
    <nameField>
        <displayFormat>Err{00000000}</displayFormat>
        <label>Error Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>